<resources>
    <string name="app_name">Inquirio</string>
    <string name="email_placeholder">Adresse e-mail</string>
    <string name="welcome_msg">Accéder à Inquirio</string>
    <string name="next">Suivant</string>
    <string name="login">Se connecter</string>
    <string name="signup">S\'inscrire</string>
    <string name="fullname">Nom complet</string>
    <string name="cell_num">Numéro de cellulaire</string>
    <string name="passwd">Mot de passe</string>
    <string name="confirmation">Confirmation du mot de passe</string>
    <string name="copyright">© 2018&#8211;2019 Olivier Brassard</string>
    <string name="title_activity_main">Inquirio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mesitems">Mes items</string>
    <string name="notifications">Notifications</string>
    <string name="ham_notifications">Mes notifications</string>
    <string name="account">Mon compte</string>
    <string name="title_activity_home">Accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Déconnexion</string>
    <string name="lostsomething">J\'ai perdu quelque chose</string>
    <string name="lostsomething_btn">J\'ai perdu quelque chose &#8230;</string>
    <string name="myitems">Mes items</string>
    <string name="near_items_lbl">Objets perdus près de votre emplacement </string>
    <string name="no_items_near">Tous les objets perdus près de votre emplacement ont été retrouvés !</string>
    <string name="congrats">Félicitations !</string>
    <string name="begin">Débuter</string>
    <string name="welcome">Bienvenue sur Inquirio !</string>
    <string name="title_activity_my_items">Mes items</string>
    <string name="YourLostObjects">Vos objets perdus</string>
    <string name="YourObjectsFound">Vos objets retrouvés</string>
    <string name="NoLostItemsHeader">On dirait que tous vos items ont été retrouvés!</string>
    <string name="NoFoundItemsHeader">Personne n\'a encore trouvé d\'items qui vous appartiennent!</string>
    <string name="title_activity_items_detail">Inquirio</string>
    <string name="aproxlocation">Emplacement aproximatif :</string>
    <string name="reward">Récompense : </string>
    <string name="cash">%1$.2f $</string>
    <string name="description">Description</string>
    <string name="ifoundthis">J\'ai trouvé cet item !</string>
    <string name="update_item">Modifier les details de l\'item</string>
    <string name="deleteitem">Supprimer cet item</string>
    <string name="title">Titre de l\'item</string>
    <string name="desc">Description de l\'item</string>
    <string name="itemlocation">Emplacement approximatif</string>
    <string name="addreward">Ajouter une récompense: </string>
    <string name="additem">Ajouter l\'item</string>
    <string name="defineLocation">Définir l\'emplacement</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis consequat risus. Suspendisse potenti. Suspendisse at arcu vitae urna metus.</string>
    <string name="title_activity_add_item">Déclarer un item perdu</string>
    <string name="title_activity_notifications">Mes notifications</string>
    <string name="title_activity_account">Mon compte</string>
    <string name="nbitems">Nombre d\'items retrouvés : %1$s</string>
    <string name="notif_user_may_have_found">%1$s à peut-être retrouvé votre item</string>
    <string name="notif_confirm_item_is_found">Cet item a-t-il été trouvé ?</string>
    <string name="no_notification">Vous n\'avez actuellement aucune notification</string>
    <string name="title_activity_map_detail">Détail de l\'emplacement de l'item</string>
    <string name="date">Date: %1$s</string>
    <string name="user_and_rating">%1$s (%2$.1f/5)</string>
    <string name="mayhavefnd">à peut-être retrouvé votre item :</string>
    <string name="heresthephoto">Voici la photo de l\'objet retrouvé :</string>
    <string name="msgforyou">Message à votre intention :</string>
    <string name="isthisyouritem">Est-ce bien votre item ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="title_activity_item_found">Décrivez l\'objet trouvé</string>
    <string name="item_found">Cet item à été retrouvé !</string>
    <string name="send">Envoyer</string>
    <string name="end">Terminer</string>
    <string name="youfound">Vous pensez avoir trouvé l\'item :</string>
    <string name="messagetodest">Ajouter un message pour le propriétaire</string>
    <string name="addpic">Ajouter une photo</string>
    <string name="contact">Contacter l\'utilisateur</string>
    <string name="contact2">Contacter l\'utilisateur\nqui a trouvé cet item</string>
    <string name="title_activity_notification_details">Détail de la notification</string>
    <string name="thanks">Merci !</string>
    <string name="thanks_dialog_txt">Une notification a bien été envoyée au propriétaire de l\'objet perdu! Celui-ci vous contactera sous peu s\'il s\'agit bien de son objet.</string>
    <string name="rate">Notez %1$s</string>
    <string name="rate_dialog_txt">Si vous avez rencontré %1$s pour récupérer votre item %2$s, nous aimerions que vous lui attribuiez une note :</string>
    <string name="later">Plus tard</string>
    <string name="foundby">Trouvé par %1$s</string>
    <string name="itemadded">Votre item a été enregistré!</string>
    <string name="itemaddeddesc">Les utilisateur situés près de l\'emplacement %1$s seront averti que vous avez perdu un item!</string>
    <string name="genericconnexionerror">Impossible de contacter le serveur, veuillez réésayer</string>
    <string name="genericerror">Une erreur est survenue, veuillez réésayer</string>
    <string name="InvalidEmail">L\'adresse email spécifiée est invalide</string>
    <string name="PasswordDoesntMatch">Les mots des passes ne correspondent pas</string>
    <string name="BadCredentials">Votre nom d\'utilisateur ou mot de passe est incorrect</string>
    <string name="InvalidPhoneNumber">Le numéro de téléphone spécifié est invalide</string>
    <string name="PasswordIsRequired">Un mot de passes est requis !</string>
    <string name="EmailAlreadyExists">Cette adresse courrielle est déjà utilisée</string>
    <string name="UnknownUserId">Erreur ! L\'utilisateur demandé n\'existe pas</string>
    <string name="UnknownItemId">Erreur ! L\'item demandé n\'existe pas</string>
    <string name="UnknownNotificationID">Erreur ! L\'information demandé n\'est plus disponible</string>
    <string name="InvalidLocation">L\'emplacement fourni est invalide</string>
    <string name="RequiredAttribute_fullname">Le nom est requis !</string>
    <string name="RequiredAttribute_locationname">Un emplacement est requis !</string>
    <string name="RequiredAttribute_title">Le titre de l\'item est requis</string>
    <string name="RequiredAttribute_message">Veuillez spécifier un message au propriétaire de l\'objet</string>
    <string name="RequiredAttribute_description">La description est requise</string>
    <string name="RequiredAttribute_email">L\'adresse courielle est requise</string>
    <string name="InvalidValue_reward">La valeur de la récompense ne peut pas être négative</string>
    <string name="TextLengthViolation_tilte">Le titre de l\'item est trop long !</string>
    <string name="TextLengthViolation_description">La description de l\'item est trop longue !</string>
    <string name="AccesDenied_reward">Veuillez vous identifier à inquirio</string>
    <string name="Forbidden">Vous n\'avez pas les autorisations requises pour accéder à cette ressource</string>





</resources>
