<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationDetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:id="@+id/txt_date"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/txt_user_rating"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_and_rating"/>
        <TextView
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mayhavefnd"/>
        <TextView
            android:id="@+id/txt_itemtitle"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Porte-monaie en cuir Steve-Madden "/>

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heresthephoto"/>
        <ImageView
            android:id="@+id/img_notif"
            android:layout_marginTop="10dp"
            android:background="#ccc"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msgforyou"/>
        <TextView
            android:id="@+id/txtMessage"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lipsum"/>
        <TextView
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isthisyouritem"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_yes"
                android:backgroundTint="#00c853"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>
            <Button
                android:id="@+id/btn_no"
                android:backgroundTint="#f00"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
