<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:src="@drawable/inquirio"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/email_field"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email_placeholder"
        />
    <EditText
        android:id="@+id/passwd_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:hint="@string/passwd"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textAlignment="center"/>

</LinearLayout>