<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NotificationDetailsActivity"
    tools:showIn="@layout/app_bar_notification_details">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotificationDetailsActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/txt_date"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_and_rating"
                android:textColor="#000"
                android:textSize="19sp"
                android:textStyle="italic" />
            <TextView
                android:textColor="#000"
                android:textSize="19sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mayhavefnd"/>
            <TextView
                android:id="@+id/txt_itemtitle"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="19sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Porte-monaie en cuir Steve-Madden "/>

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heresthephoto"/>
            <ImageView
                android:id="@+id/img_notif"
                android:layout_marginTop="10dp"
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgforyou"/>
            <TextView
                android:id="@+id/txtMessage"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lipsum"/>
            <TextView
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isthisyouritem"/>
            <LinearLayout
                android:id="@+id/ll_btn_yn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_yes"
                    android:backgroundTint="#00c853"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"/>
                <Button
                    android:id="@+id/btn_no"
                    android:backgroundTint="#f00"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_btn_contact"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_contactFinder"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:drawableLeft="@android:drawable/stat_notify_chat"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>