<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddItemActivity"
    tools:showIn="@layout/app_bar_add_item">
    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/title" />

        <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:hint="@string/desc"
                android:inputType="textMultiLine"
                android:maxLength="140"

                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addreward"
                />

            <EditText
                android:id="@+id/txtReward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="numberDecimal" />
            <TextView
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_addlocation"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="13dp"
            android:text="@string/defineLocation"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/google_map" />
        <TextView
            android:textSize="17sp"
            android:id="@+id/selectedlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Emplacement selectionné"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/additem"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>