<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_vertical"
        android:background="@color/white">
        <Button
            android:id="@+id/btn_ilostsomething"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/lostsomething_btn"/>
        <TextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="8dp"
            android:text="@string/near_items_lbl"
            android:textSize="18sp"
            android:textColor="#000"/>
        <ListView
            android:id="@+id/lvNearItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/bottom_bar_height" />
        <LinearLayout
            android:id="@+id/empty_lv_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/community"
                />
            <TextView
                android:layout_marginTop="35dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/congrats"
                android:textSize="20sp"
                android:textColor="#000"
                />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/no_items_near"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        app:itemIconTint="#000"
        app:itemTextColor="#000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>

